# Walugen

./: .gitignore  CMakeLists.txt  README.md
src/: init.c  main.c
src/base/: parser.c  parser.h  val.h
src/base/backend/: backends.h  hellwal.c  pywal.c
src/base/backend/wallpaper/: swaybg.c  swww.c  wallbackends.h
src/func/: def.c  def.h  reload.c  reload.h
src/msg/: error.h  info.h  log.c  log.h  warn.h
